--- a/V101/Theorie.tex
+++ b/V101/Theorie.tex
@@ -1,7 +1,7 @@
 \section{Einleitung}
-Das Trägheitsmoment von verschiedene Körpern soll bestimmt werden und der Satz von Steiner verifiziert werden.
+Das Trägheitsmoment von verschiedenen Körpern soll bestimmt werden und der Satz von Steiner verifiziert werden.
 \section{Theorie}
-Das Drehmoment $M$, das Trägheitsmoment $I$ als auch die Winkelbeschleunigung \.{\omega} charakterisieren die Rotationsbewegung.
+Das Drehmoment $M$, das Trägheitsmoment $I$ als auch die Winkelbeschleunigung $\dot{\omega}$ charakterisieren die Rotationsbewegung.
 Für eine punktförmige Masse kann das Trägheitsmoment mit $I = m*r^2$ berechnen. Dabei ist m die Masse und r der Abstand zur Drehachse.
 Für ein ausgedehnten Körper um eine feste Achse kann das Gesamtträgheitsmoment als:
 \begin{equation}
@@ -15,7 +15,7 @@ In Abbildung 1 sind verschiedene Objekte mit deren Trägheitsmoment dargestellt.
 \begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{Bild1.jpg}
-\caption{Objekte mit deren Trägheitsmoment}[1]
+\caption{Objekte mit deren Trägheitsmoment[1]}
 \label{fig:Abb1}
 \end{figure}
 Ist die Drehachse nicht durch den Schwerpunkt eines Körpers sondern parallel mit einem Abstand a
