--- a/V101/Protokoll.tex
+++ b/V101/Protokoll.tex
@@ -20,6 +20,7 @@
 \input{Theorie.tex}
 \input{Versuchsaufbau.tex}
 \input{Durchfuehrung.tex}
+\input{Auswertung.tex}
 \printbibliography{}
 \nocite{*}
 \end{document}
