--- a/V101/Auswertung.tex
+++ b/V101/Auswertung.tex
@@ -44,7 +44,7 @@ Damit ergibt sich für die Winkelrichtgröße:
 
 \centerline{$\bar{D} = \num{2.388(39)e-2} Nm$}
 
-Nun muss noch das TräTrägheitsmoment der Drillachse bestimmt werden. Dazu muss
+Nun muss noch das Trägheitsmoment der Drillachse bestimmt werden. Dazu muss
 die Gleichung (3) für diesen Fall noch angepasst werden, da sich das gesamte
 Trägheitsmoment aus dem der Drillachse und der zwei Massen zusammensetzt:
 
