--- a/V101/Protokoll.tex
+++ b/V101/Protokoll.tex
@@ -21,6 +21,7 @@
 \input{Versuchsaufbau.tex}
 \input{Durchfuehrung.tex}
 \input{Auswertung.tex}
+\input{Diskussion.tex}
 \printbibliography{}
 \nocite{*}
 \end{document}
