--- a/V101/Diskussion.tex
+++ b/V101/Diskussion.tex
@@ -1,5 +1,18 @@
 \section{Diskussion}
-Zwischen dem theoretischen und experimentellen Trägheitsmoment sind die Werte weit auseinander. Das kann dazu führen, dass die Winkelgröße D zu Beginn falsch bestimmt worden ist und somit sich der Fehler fortsetzt.
-Ebenso gibt es kein negatives Trägheitsmoment, da sie physikalisch nicht sinnvoll sind bzw. nicht möglich sein können. Der mögliche Fehler liegt an der Bestimmung des Trägheitsmomentes der Drillachse.
-Um die experimentelle Messwerte mit dem theoretischen Werte vergleichen zu können müsste die
-Winkelgröße D  gemittelt werden um den Fehler zu verringern.
+Zwischen dem theoretisch und experimentell bestimmten Trägheitsmoment sind die Werte weit auseinander.
+Das kann daran liegen, dass die Winkelrichtsgröße D zu Beginn fehlerhaft bestimmt worden ist
+und somit sich der Fehler fortsetzt. Außerdem könnte auch das Trägheismoment der Drillachse
+zu groß bestimmt worden sein und da man zur Bestimmung der Trägheitsmomente das Trägheitsmoment
+der Drillachse abziehen muss kann dies zu den negativen Werten geführt haben.
+Bei der Bestimmung des Trägheitsmoments der Drillachse wurde die Metallstange
+als Masselos angenommen, was auch eine Fehlerquelle des Trägheitsmomentes ist.
+Das Messen der Schwingungsdauer der Objekte war zum Teil sehr schwierig und die
+Messuhren haben nicht genau dann ausgelößt, wenn sie betätigt wurden. Dadurch ist
+der Fehler der Trägheitsmomente groß geworden und das könnte auch dazu beigetragen
+haben, dass die Trägheitsmomente negativ geworden sind.
+Es gibt keine negativen Trägheitsmomente, da sie physikalisch nicht sinnvoll sind
+bzw. nicht möglich sind.
+Die Näherung der Körperteile der Puppe als Zylinder ist ungenau, wodurch der
+theoretisch bestimmte Wert nicht sehr genau sein kann.
+Die Messungen könnten Verbessert werden, durch geeichte Federwaagen mit denen
+genau senkrecht gemessen werden kann.
