--- a/V353/Theorie.tex
+++ b/V353/Theorie.tex
@@ -40,8 +40,8 @@ und der Spannungsquelle. Diese Phasenverschiebung wird größer, je größer $\o
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{Schaltungsbeispiel.png}
-  \caption{Schaltungsbeispiel eines RC-Kreises mit Sinusspannung}
+  \includegraphics[height=5cm, width=0.7\textwidth]{Schaltungsbeispiel.png}
+  \caption{Schaltungsbeispiel eines RC-Kreises mit Sinusspannung [1]}
 \end{figure}
 
 Um eine Gleichung für die Phasenverschiebung herzuleiten, wird zunächst die in Abbildung 1
