--- a/V353/Theorie.tex
+++ b/V353/Theorie.tex
@@ -28,6 +28,7 @@ die Gleichung:
 
 \begin{equation}
   Q(t) = Q(0)\, \exp\left(\frac{-t}{RC}\right)
+  \label{eq:1}
 \end{equation}
 
 Die Zeitkonstante des Systems ist RC, denn sie beschreibt die Geschwindigkeit, mit
