--- a/V353/Auswertung.tex
+++ b/V353/Auswertung.tex
@@ -14,14 +14,21 @@ berechnet.
 \end{figure}
 Die Ausgleichsrechnungs allgemein lautet:
 \begin{align}
-  y & = m \cdot x + b \label{eq:1}\\
-  m & = \frac {\bar{xy} - \bar{x} \cdot \bar{y}} {\bar{x^2} -\bar{x}^2}&  \label{eq:2}\\
-  b & = \frac {\bar{y} \cdot \bar{x}^2 - \bar{xy} \cdot \bar{x}} {\bar{x^2}-\bar{x}^2}& \label{eq:3}
+  y & = m \cdot x + b \label{eq:}\\
+  m & = \frac {\bar{xy} - \bar{x} \cdot \bar{y}} {\bar{x^2} -\bar{x}^2}&  \label{eq:}\\
+  b & = \frac {\bar{y} \cdot \bar{x}^2 - \bar{xy} \cdot \bar{x}} {\bar{x^2}-\bar{x}^2}& \label{eq:}
 \end{align}
 Für diese Ausgleichsrechnung wird die Formel (\ref{eq:1}) umgeschrieben und die erechnetet Werte lautetn: \\
 \newline
 \centerline{$ln(\frac{U_\text{c}}{U_\text{0}}) = -\frac{1}{m} + b$}\\
+\newline
 \centerline{mit $m = (2,845 \pm 0,245) \cdot 10^{-3} \si{\second}$}\\
+\newline
 \centerline{und $b = (-0,393 \pm 0,074)$}
 \newline
+\subsection{Bestimmung der Zeitkonstante über den Tiefpassvorgang}
+Dabei wird die Amplitude in Abhängigkeit von der Frequenz wie in der Tabelle 2 in
+einen Diagramm dargestellt.
+\input{Tab2.tex}
+
 \end{document}
