--- a/V353/Tab2.tex
+++ b/V353/Tab2.tex
@@ -1,22 +1,39 @@
 \begin{table}[H]
   \centering
-  \caption{Tabelle von der Amplitude in Abhängigkeit der Frequenz mit U_0 = 10V}
+  \caption{Tabelle von der Amplitude in Abhängigkeit der Frequenz mit $U_0 = 10V$}
     \begin{tabular}{c c}
-      \toprule
-      $frac{A(\omgea)}/{\omega}$
-      $\phi$ in Grad & $\phi$ in rad & $F \, \, \text{in} \, N$ &
-      $D \, \, \text{in} \, 10^{-2} N \si{\meter}$ \\
-      \midrule
-      50 &  $\frac{5\pi}{18}$ & 0.42 & 2.07 \\
-      60 &  $\frac{\pi}{3}$ & 0.56 & 2.23 \\
-      80 &  $\frac{4\pi}{9}$ & 0.8 & 2.46 \\
-      90 &  $\frac{\pi}{2} $ & 0.82 & 2.24 \\
-      100 & $\frac{5\pi}{9}$ & 0.96 & 2.37 \\
-      120 & $\frac{2\pi}{3}$ & 1.16 & 2.38 \\
-      140 & $\frac{7\pi}{9}$ & 1.34 & 2.36 \\
-      160 & $\frac{8\pi}{9}$ & 1.54 & 2.37 \\
-      180 & $\pi           $ & 1.78 & 2.44 \\
-      200 & $\frac{10\pi}{9}$ &   2 & 2.46 \\
+      \toprule \\
+      $\frac{A(\omega)}{U_\text{0}}$ & $\omega \,\, \text{in} \,\, Hz$ \\
+      \midrule \\
+      0.448 & 10\\
+      0.448 & 20\\
+      0.448 & 30\\
+      0.440 & 40\\
+      0.440 & 50\\
+      0.432 & 60\\
+      0.424 & 70\\
+      0.416 & 80\\
+      0.416 & 90\\
+      0.400 & 100\\
+      0.328 & 200\\
+      0.264 & 300\\
+      0.216 & 400\\
+      0.176 & 500\\
+      0.152 & 600\\
+      0.135 & 700\\
+      0.120 & 800\\
+      0.112 & 900\\
+      0.096 & 1000\\
+      0.0448& 2000\\
+      0.0296& 3000\\
+      0.0224& 4000\\
+      0.0180& 5000\\
+      0.0152& 6000\\
+      0.0128& 7000\\
+      0.0112& 8000\\
+      0.0100& 9000\\
+      0.0090& 10000\\
       \bottomrule
     \end{tabular}
+    \label{tab:2}
   \end{table}
