--- a/V353/Protokoll.tex
+++ b/V353/Protokoll.tex
@@ -17,7 +17,9 @@
 %\thispagestyle{empty}
 \tableofcontents
 \newpage
+\input{Einleitung.tex}
 \input{Theorie.tex}
-%\printbibliography{}
-%\nocite{*}
+\input{D.tex}
+\printbibliography{}
+\nocite{*}
 \end{document}
