--- a/V353/Theorie.tex
+++ b/V353/Theorie.tex
@@ -1,7 +1,5 @@
 \section{Theorie}
 
-In diesem Versuch soll Relaxationserscheinungen anhand eines RC-Kreises untersucht
-werden.
 
 Relaxationserscheinungen werden beobachtet wenn ein System nicht-oszillatorisch
 in seinen Ausgangszustand zurückkehrt, in dem Fall des RC-Kreises exponentiell.
@@ -42,7 +40,7 @@ und der Spannungsquelle. Diese Phasenverschiebung wird größer, je größer $\o
 \begin{figure}
   \centering
   \includegraphics[height=5cm, width=0.7\textwidth]{Schaltungsbeispiel.png}
-  \caption{Schaltungsbeispiel eines RC-Kreises mit Sinusspannung [1]}
+  \caption{Schaltungsbeispiel eines RC-Kreises mit Sinusspannung [1].}
 \end{figure}
 
 Um eine Gleichung für die Phasenverschiebung herzuleiten, wird zunächst die in Abbildung 1
