--- a/V353/Auswertung.tex
+++ b/V353/Auswertung.tex
@@ -30,5 +30,25 @@ Für diese Ausgleichsrechnung wird die Formel (\ref{eq:1}) umgeschrieben und die
 Dabei wird die Amplitude in Abhängigkeit von der Frequenz wie in der Tabelle 2 in
 einen Diagramm dargestellt.
 \input{Tab2.tex}
-
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{Diagramm2.pdf}
+  \caption{Diagrammdarstellung}
+  \label{fig:2}
+\end{figure}
+Für die nicht-lineare Ausgleichsrechnung wird die Gleichung () verwendet.
+\begin{equation*}
+  \frac{A}{U_0} = \frac{1}{\sqrt{1 + (\omega m)^2}}
+\end{equation*}
+\centerline{mit $m = (4,46 \pm \, 0.07) \cdot 10^{-3} \si{\second}$}
+\subsection{Bestimmung der Zeitkonstante mit Hilfe der Phasenverschiebung}
+Es werden die Daten von der Tabelle 3 in einen Diagramm dargestellt und mit Hilfe
+einer nicht-linearen Ausgleichsrechnung die Zeitkonstante bestimmt.
+\input{Tab3.tex}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{Diagramm3.pdf}
+  \caption{Diagrammdarstellung}
+  \label{fig:3}
+\end{figure}
 \end{document}
