--- a/V353/D.tex
+++ b/V353/D.tex
@@ -24,8 +24,8 @@ Für diese Messung wird die in Abbildung 3 gezeigte Schaltung benutzt.
 \end{figure}
 
 Nun soll die Phasenverschiebung zwischen der Generatorspannung und der Kondensatorspannung
-gemessen werden. Dazu wird ein Zweikanal-Oszilloskop benötigt, wo man beide Spannungen
-gleichzeitig anzeigen lassen kann. Bei den beiden Spannungen wird zum einen der
+gemessen werden. Dazu wird ein Zweikanal-Oszilloskop benötigt, wo beide Spannungen
+gleichzeitig angezeigt werden. Bei den beiden Spannungen wird zum einen der
 zeitliche Abstand der Nulldurchgänge und zum anderen die Periodenlänge der Generatorspannung
 in Abhängigkeit von der Frequenz der Generatorspannung gemessen.
 In Abbildung 4 sind diese Größen bildlich dargestellt.
