--- a/V353/Protokoll.tex
+++ b/V353/Protokoll.tex
@@ -1,7 +1,6 @@
 \input{header.tex}
 
 \title{Versuch 353 "Das Relaxationsverhalten eines RC-Kreises"}
-
 \author{
   Robert Konradi\\%
   \href{mailto:authorA@udo.edu}{robert.konradi@tu-dortmund.de}%
@@ -20,6 +19,7 @@
 \input{Einleitung.tex}
 \input{Theorie.tex}
 \input{D.tex}
+\input{Auswertung.tex}
 \printbibliography{}
 \nocite{*}
 \end{document}
