--- a/V353/Auswertung.tex
+++ b/V353/Auswertung.tex
@@ -1,5 +1,4 @@
 
-\begin{document}
 \section{Auswertung}
 \subsection{Bestimmung der Zeitkonstante über Auf- und Entladungsvorgang}
 Zur Bestimmung der Zeitkonstante $RC$ werden die Messdaten wie in Tabelle(\ref{tab:1})
@@ -58,11 +57,11 @@ Dabei wird die Gleichung () verwendet und umgeschrieben:
 \centerline{Dabei ist $m=(5,228 \pm \, \inf) \cdot 10^{-3} \si{\second}$}
 Nun wird die relative Amplitude in Abhängigkeit der Phase in einen Polarkoordinaten aufgetragen mit
 der vorhin ermittelten $RC-Wert = (5,228 \pm \, \inf) \cdot 10^{-3}$.
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=\textwidth]{Polar.pdf}
-  \label{fig:4}
-\end{figure}
+%\begin{figure}[H]
+%  \centering
+%  \includegraphics[width=\textwidth]{Polar.pdf}
+%  \label{fig:4}
+%\end{figure}
 \subsection{Integrator}
 In diesem Fall wird die Gleichung () verwendet. \\
 \centerline{1.Fall Sinusspannung}
@@ -76,7 +75,7 @@ In diesem Fall wird die Gleichung () verwendet. \\
 \end{figure}
 Man erkennt auf dem Thermodruck das die Integration über die Funktion f(x) die
 Stammfunktion F(x) ergibt.
-2. Fall Dreieckspannun
+2. Fall Dreieckspannung
 \begin{equation*}
   f(x) =
   \begin{cases}
@@ -97,4 +96,3 @@ Die Integrationen für diese Funktion f(x) lautet:
   \includegraphics[width=\textwidth]{Dreieckspannung.BMP}
   \label{fig:6}
 \end{figure}
-\end{document}
