--- a/V353/Tab3.tex
+++ b/V353/Tab3.tex
@@ -2,9 +2,9 @@
   \centering
   \caption{Tabelle zur Bestimmung der Zeitkonstante mit $\phi$ = $\frac{a}{b} \cdot 2\pi$}
     \begin{tabular}{c c}
-      \toprule \\
-      $\phi / \text{rad}$ & $\omega / \text{Hz}$&  \\
-      \midrule \\
+      \toprule
+      $\phi / \text{rad}$ & $\omega / \text{Hz}$  \\
+      \midrule
        0.0000 &    10 \\
        0.0524 &    20 \\
        0.1070 &    30 \\
