--- a/V353/Theorie.tex
+++ b/V353/Theorie.tex
@@ -11,12 +11,14 @@ herleiten.
 
 \begin{equation}
   \frac{dQ}{dt} = -\frac{1}{RC}\, Q(t)
+  \label{eq:1}
 \end{equation}
 
 Mit den Anfangsbedingungen $Q(0)=0$ und $Q(\infty)= CU_0$ ergibt sich für den Aufladevorgang:
 
 \begin{equation}
   Q(t) = CU_0 \left(1 - \exp\left(\frac{-t}{RC}\right)\right)
+  \label{eq:2}
 \end{equation}
 
 Wenn die Spannungsquelle nach der Aufladung wieder entfernt, entlädt sich der Kondensator
@@ -26,7 +28,7 @@ die Gleichung:
 
 \begin{equation}
   Q(t) = Q(0)\, \exp\left(\frac{-t}{RC}\right)
-  \label{eq:1}
+  \label{eq:3}
 \end{equation}
 
 Die Zeitkonstante des Systems ist RC, denn sie beschreibt die Geschwindigkeit, mit
@@ -41,42 +43,48 @@ und der Spannungsquelle. Diese Phasenverschiebung wird größer, je größer $\o
   \centering
   \includegraphics[height=5cm, width=0.7\textwidth]{Schaltungsbeispiel.png}
   \caption{Schaltungsbeispiel eines RC-Kreises mit Sinusspannung [1].}
+  \label{fig:1}
 \end{figure}
 
-Um eine Gleichung für die Phasenverschiebung herzuleiten, wird zunächst die in Abbildung 1
+Um eine Gleichung für die Phasenverschiebung herzuleiten, wird zunächst die in Abbildung (\ref{fig:1})
 gezeigte Schaltung mithilfe des Kirchhoffschen Gesetzes beschrieben.
 
 \begin{equation}
   U(t) = U_R(t) + U_C(t)
+  \label{eq:4}
 \end{equation}
 
 Damit ergibt sich die Gleichung:
 
 \begin{equation}
   U_0 \cos(\omega t) = -A\omega RC \sin(\omega t + \phi) + \cos(\omega t + \phi)
+\label{eq:5}
 \end{equation}
 
 Wird der Fall $\omega t = \frac{\pi}{2}$ betrachtet folgt für die Phasenverschiebung:
 
 \begin{equation}
   \phi(\omega) = \arctan(-\omega RC)
+  \label{eq:6}
 \end{equation}
 
-Nun soll die Gleichung (5) für den Fall $\omega t + \phi = \frac{\pi}{2}$ betrachtet werden.
+Nun soll die Gleichung (\ref{eq:5}) für den Fall $\omega t + \phi = \frac{\pi}{2}$ betrachtet werden.
 Damit lässt sich eine Gleichung für die Amplitude der Kondensatorspannung herleiten, die
 auch von der Frequenz der Spannungsquelle abhängt.
 
 \begin{equation}
   A(\omega) = \frac{U_0}{\sqrt{1+\omega^2 R^2 C^2}}
+  \label{eq:7}
 \end{equation}
 
-Die Gleichung (4) wird nun mit der Relation $I(t) = C\frac{dU_C}{dt}$ umgeschrieben zu:\\\\
+Die Gleichung (\ref{eq:4}) wird nun mit der Relation $I(t) = C\frac{dU_C}{dt}$ umgeschrieben zu:\\\\
 
-$U(t) = RC \frac{dU_C}{dt} + U_C(t)$\\\\
+\centerline{$U(t) = RC \frac{dU_C}{dt} + U_C(t)$} \
 
 Unter der Vorraussetzung, dass $\omega >> \frac{1}{RC}$ ist kann die Gleichung
 zu einem Integral umgeformt werden:
 
 \begin{equation}
   U_C(t) = \frac{1}{RC} \int_{0}^{t} U(t')  \, \symup{d}t'
+  \label{eq:8}
 \end{equation}
