--- a/V353/Protokoll.tex
+++ b/V353/Protokoll.tex
@@ -20,6 +20,7 @@
 \input{Theorie.tex}
 \input{D.tex}
 \input{Auswertung.tex}
+\input{Diskussion.tex}
 \printbibliography{}
 \nocite{*}
 \end{document}
