--- a/V353/Auswertung.tex
+++ b/V353/Auswertung.tex
@@ -8,8 +8,13 @@ berechnet.
 \begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{Diagramm1.pdf}
-  \caption{Diagrammdarstellung}
+  \caption{Diagrammdarstellung vom Entladungsvorgang}
   \label{fig:6}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{Entlade.jpg}
+  \caption{Thermodruck vom Entladungsvorgang}
 \end{figure}
 Die Ausgleichsrechnungs allgemein lautet:
 \begin{align}
@@ -33,7 +38,7 @@ einen Diagramm dargestellt.
 \begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{Diagramm2.pdf}
-  \caption{Diagrammdarstellung}
+  \caption{Diagrammdarstellung von der relatvien Amplitude in Abhängigkeit der Frequenz}
   \label{fig:7}
 \end{figure}
 Für die nicht-lineare Ausgleichsrechnung wird die Gleichung (\ref{eq:7}) verwendet.
@@ -49,17 +54,16 @@ einer nicht-linearen Ausgleichsrechnung die Zeitkonstante bestimmt.
 \begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{Diagramm3.pdf}
-  \caption{Diagrammdarstellung}
+  \caption{Diagrammdarstellung von der Phasenverschiebung in Abhängigkeit von der Frequenz}
   \label{fig:8}
 \end{figure}
 Dabei wird die Gleichung (\ref{eq:6}) verwendet und umgeschrieben:
 \begin{equation*}
   \phi= arctan(m*\omega)
 \end{equation*}
-\centerline{Dabei ist $m=(5,228 \pm \, \inf) \cdot 10^{-3} \si{\second}$} \\
+\centerline{Dabei ist $m=(5,228 \pm \, 0,259) \cdot 10^{-3} \si{\second}$} \\
 Wie auch hier ist $m$ die Zeitkonstante $RC$.\\
-Nun wird die relative Amplitude in Abhängigkeit der Phase in einen Polarkoordinaten aufgetragen mit
-den vorhin ermittelten $RC-Wert = (5,228 \pm \, \inf) \cdot 10^{-3}$.
+Nun wird die relative Amplitude in Abhängigkeit der Phase in einen Polarkoordinaten aufgetragen.
 \begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{Polar.pdf}
@@ -99,8 +103,8 @@ Die Integrationen für diese Funktion f(x) lauten:
 Der Thermodruck zeigt auch hier das die Funktion f(x) die Stammfunktion F(x) ergibt.\\\\
 \centerline{3.Fall Rechteckspannung}
 \begin{align*}
-f_1 (x) =  c \, \text{für} \, 0 \leq x \leq a \\
-f_2 (x) =  -c \, \text{für} \, a\leq x \leq 2a
+f_1 (x) =  c \,\, \text{für} \,\, 0 \leq x \leq a \\
+f_2 (x) =  -c \,\, \text{für} \,\, a\leq x \leq 2a
 \end{align*}
 Durch Integration über die Funktion $f_1 (x)$ und $f_2 (x)$ ergibt sich:
 \begin{align*}
