--- a/V353/Diskussion.tex
+++ b/V353/Diskussion.tex
@@ -1,1 +1,11 @@
 \section{Diskussion}
+Unsere Zeitkonstante $RC$ weicht bei den unterschiedlichen Messmethoden voneinander ab.
+In diesem Fall handelt es sich hier um ein systematischen Fehler.
+Ein möglicher Grund für die Abweichung ist, dass bei der ersten Messmethode
+ am Ende des Entladevorgangs fünf Mal der selben Wert aufgeschrieben wurde.
+Das könnte daran liegen, dass die Schaltung oder das Oszilloskop nicht
+einwandfrei funktioniert haben, wodurch das Ende des Entladevorgangs nicht mehr
+genau gemessen werden konnte.
+Ein weiterer möglicher Grund ist, dass bei den Messmethoden der innen
+Widerstand des Oszilloskops vernachlässigt worden ist, was zu falschen Werten
+geführt haben könnte.
