--- a/V353/Theorie.tex
+++ b/V353/Theorie.tex
@@ -4,7 +4,7 @@
 Relaxationserscheinungen werden beobachtet wenn ein System nicht-oszillatorisch
 in seinen Ausgangszustand zurückkehrt, in dem Fall des RC-Kreises exponentiell.
 
-Ein RC-Kreis besteht aus einem Wiederstand und einem Kondensator, die in Reihe
+Ein RC-Kreis besteht aus einem Widerstand und einem Kondensator, die in Reihe
 geschaltet sind. Wenn eine Spannungsquelle an diese Schaltung angeschlossen wird,
 lädt sich der Kondensator auf. Für diesen Fall lässt sich eine Differentialgleichung
 herleiten.
@@ -21,8 +21,8 @@ Mit den Anfangsbedingungen $Q(0)=0$ und $Q(\infty)= CU_0$ ergibt sich für den A
   \label{eq:2}
 \end{equation}
 
-Wenn die Spannungsquelle nach der Aufladung wieder entfernt, entlädt sich der Kondensator
-wieder. Es ergibt sich für die Differentialgleichung die selbe wie beim Aufladevorgang,
+Wenn die Spannungsquelle nach der Aufladung entfernt wird, entlädt sich der Kondensator.
+Es ergibt sich für die Differentialgleichung die selbe wie beim Aufladevorgang,
 nun sind allerdings die Anfangsbedingungen anders $Q(\infty) = 0$. Daraus ergibt sich dann
 die Gleichung:
 
@@ -32,7 +32,7 @@ die Gleichung:
 \end{equation}
 
 Die Zeitkonstante des Systems ist RC, denn sie beschreibt die Geschwindigkeit, mit
-der sich das System seinen Endzustand annähert. Dabei ist R der Wiederstand des Wiederstandes
+der sich das System seinen Endzustand annähert. Dabei ist R der Widerstand
 und C die Kapazität des Kondensators.\\\\
 
 Für den Fall, dass die Spannungsquelle eine Sinusspannung mit der Frequenz $\omega$
